# blog

./: .gitignore  .gitmodules  .travis.yml  Makefile  README.md  config.toml  mkdocs.yml  netlify.toml  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt  test_blog.py
.github/workflows/: main.yml
archetypes/: default.md
content/: _index.md  about.md  deploy-aws-lambda-with-travisci-1.md  deploy-aws-lambda-with-travisci-2.md  here-are-some-rocks.md  projects.md  publications.md  terraform-backend-with-cloudformation.md  the-verdict-is-in.md
content/extra/: custom.css
content/pages/: about.md
content/post/: deploy-aws-lambda-with-travisci-1.md  deploy-aws-lambda-with-travisci-2.md  terraform-backend-with-cloudformation.md  test-post-2.md  test-post-please-ignore.md  the-verdict-is-in.md
content/posts/: #what-i-use.md#  consumed-content-week-ending-03-06-20.md  consumed-content-week-ending-03-13-20.md  consumed-content-week-ending-03-20-20.md  consumed-content-week-ending-03-27-20.md  consumed-content-week-ending-04-03-20.md  consumed-content-week-ending-04-10-20.md  consumed-content-week-ending-04-17-20.md  consumed-content-week-ending-04-24-20.md  consumed-content-week-ending-05-01-20.md  consumed-content-week-ending-05-08-20.md  consumed-content-week-ending-05-15-20.md  consumed-content-week-ending-05-22-20.md  consumed-content-week-ending-2-14-20.md  consumed-content-week-ending-2-21-20.md  consumed-content-week-ending-2-28-20.md  (+19 more)
docs/: about.md  blog.md  index.md  posts.md  publications.md
site/: 404.html  index.html  sitemap.xml
(+47 files in other folders)
