[tool.poetry]
name = "blog-mkdocs"
version = "0.1.0"
description = "My blog built with mkdocs"
authors = ["Mike Vanbuskirk <mike@mikevanbuskirk.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.6.0"
mkdocs-terminal = "^4.6.0"
mkdocs-blogging-plugin = "^2.2.11"
pymdown-extensions = "^10.10.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"
isort = "^5.13.2"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
